--- a/osoby/ewelina-cis/index.html
+++ b/osoby/ewelina-cis/index.html
@@ -16,20 +16,18 @@
 			Ewelina Cis – autorka wierszy i krótkich form prozatorskich. Publikowała m.in. w „8. Arkuszu Odry” i „Kontencie”. Laureatka konkursów poetyckich, m.in. XXXI OKP im. K.K. Baczyńskiego i XXXVI OKP im. Zbigniewa Herberta. Zawodowo art directorka i projektantka graficzna. Mieszka i pracuje w Warszawie, z której nie pochodzi.
 
 				<h3>***[Ciepły oddech]</h3>
-				<p>Jeśli zamknę lewe oko:<br>
-ludzie wloką swoje cienie.<br>
-Jeśli zamknę prawe oko:<br>
-cienie popychają swoich ludzi.<br>
-</p>
-<p>Wszyscy (i ludzie, i cienie)<br>
-przyszli leżeć na wymierzonej<br>
-w słońce płycie i słuchać<br>
-mechanicznych ptaków.</p>
-<p>Podzielona boli mniej ta tęsknota.<br>
-Jest w nas czerń i biel, bieli jest<br>
-więcej, mniej jest czerni, która,<br>
-zobacz sam: zmienia się w szarość,<br>
-barwi beton.</p>
+				<p>Ciepły oddech światła na twarzy,<br>
+lepkiego światła rozgrzanej lawy<br>
+w lampie z lawą. Źle czy dobrze<br>
+jest kochać rzeczy jak ludzi?</p>
+<p>To, że nie słyszysz pytania,<br>
+to nie znaczy, że nie padło<br>
+w myśli, a język drga. Te słowa są<br>
+żywe, poruszają językiem; one, nie ja.</p>
+<p>Te same zasady, które panują w lampie<br>
+z lawą panują w kosmosie. Te same<br>
+siły, które poruszają lawę w lampie<br>
+z lawą rodzą gwiazdy, mnożą odpowiedzi.</p>
 
 
 <!-- TODO: Change group_id, release_id to names in UI -->
