--- a/osoby/adam-jaworski/index.html
+++ b/osoby/adam-jaworski/index.html
@@ -1,192 +1,157 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Adam Jaworski Wydania  „Adam Jaworski” | POZa Linią</title>
+		<title>Adam Jaworski: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Adam Jaworski</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Adam Jaworski
+					<br>
+				</h1>
+
 			Adam Jaworski – pochodzi z Łysakowa pod Lublinem. Mieszka w Krakowie. Poeta, arachnofil. Laureat projektu ,,Połów. Poetyckie debiuty 2024”. Autor książki: „Baśń o zwichnięciu stawu biodrowego” (2025), z którego pochodzą prezentowane utwory.
 
-				<h3>powrót Jagny</h3>
-				<p>prawie początek wakacji: wieś to maszyna<br>
-do produkcji zboża i dzieci<br>
-– pani katechetka wyostrza<br>
-władze moralne i tnie się</p>
-<p>nimi po kasi gdy mówi o samogwałcie<br>
-(o masturbacji) w kontekście ludobójstwa<br>
-mój kolega patus ma bekę<br>
-że ma miejsce siedzące</p>
-<p>obok Hitlera<br>
-dla klucza jest zamek (1 Kor 6:9–10)<br>
-a tam z tyłu są zęby<br>
-– dla przegryzienia</p>
-<p>noworodków – po kryjomu<br>
-z torrentów pobieram<br>
-ten oscarowy film o spedalonych kowbojach<br>
-w Łysakowie umiera ostatnia krowa</p>
-<p>play</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/1">grupy 1</a>
-				<h3>szkic do tryptyku Święty Sebastian</h3>
-				<div class="right">
-<p><em>W rzeczywistości chciałem namalować bardziej krzyk niż strach. Myślę, że gdybym lepiej przemyślał przyczyny, które wyzwalają krzyk, mógłbym oddać to o wiele trafniej. Powinienem w pewnym sensie mieć większą świadomość strachu, który wywołuje krzyk. Moje obrazy były zbyt abstrakcyjne.</em><br>
-Francis Bacon</p>
-</div>
-<p></p>
-<p><strong><strong>lewe skrzydło:</strong></strong></p>
-<p>w naszej rodzinie nie było wariatów<br>
-no może Głupi Ignac jak pochlał<br>
-to dostawał białej gorączki<br>
-i po pokojach latały talerze</p>
-<p>i fragmenty prawdziwej polskiej poezji no<br>
-może Stara Celejka<br>
-której styki za młodu przegrzała rozpusta<br>
-wyciągała drzazgi z oka językiem</p>
-<p>i kotki z rzeki na usta-usta no<br>
-może na starość prababka Wiktoria<br>
-rzucała w kury pieniędzmi<br>
-ale przecież nie była groźna</p>
-<p>dlatego naprawdę pojąć nie można:<br>
-dlaczego się urodziłeś</p>
-<p>dlaczego to nam trafił się taki niedorozwój<br>
-dlaczego to nam trafił się taki tyfus</p>
-<p><strong><strong>prawe skrzydło:</strong></strong></p>
-<p>w naszej rodzinie nie było samobójców<br>
-oprócz wujka A który po prostu wypił trochę za dużo<br>
-Roundupu i spalił sobie wnętrzności<br>
-z bólu odgryzł usta naprawdę</p>
-<p>nie było w naszej rodzinie samobójców<br>
-oprócz wujków B i C<br>
-którym puściły nerwy<br>
-zwieracza gdy sznur nie puścił</p>
-<p>i od tamtej pory B i C straszą<br>
-w łysakowskim lasku i mojej poezji<br>
-tak naprawdę nie było<br>
-samobójców oprócz mnie</p>
-<p>odkąd A B i C zapukali<br>
-w geny o trzeciej nad ranem i przemówili<br>
-w tym swoim strasznym języku<br>
-co wcale nie jest śmieszne</p>
-<p>a jeśli jest to jest<br>
-to żart<br>
-pokroju: twoja stara<br>
-ubiera się w Smyku</p>
-<p>i chodzi na Teleexpress do teatru<br>
-chociaż to tylko marginalna uwaga<br>
-na kieszonkowców:<br>
-cenne rzeczy trzymać przy sobie</p>
-<p>w zasięgu wzroku</p>
-<p><strong><strong>ołtarz:</strong></strong></p>
-<p>byłeś tylko chłopcem<br>
-mocno związanym z przeszłością<br>
-sznurem który udźwignie<br>
-pęknięcie rdzenia kręgowego dlatego</p>
-<p>że byłeś tylko chłopcem<br>
-z małej miejscowości<br>
-rozsypałeś się<br>
-w ciałach obcych mężczyzn</p>
-<p>„jak zasuszone w książkach kwiaty”<br>
-gdy przemierzałeś miasta<br>
-bujne od chłopców o złotych maskach<br>
-to miasta</p>
-<p>odwiedzały ciebie<br>
-dogłębnie<br>
-i od każdej strony<br>
-i nikt nie schylił się</p>
-<p>by podnieść ci głowę<br>
-z kałuży wymiocin<br>
-chuchnąć ci w zimne dłonie<br>
-ściszyć twój płacz przez sen</p>
+<ul>
+				<li><a href="/1/1/powr%C3%B3t-jagny/">powrót Jagny</a></li>
+				<li><a href="/1/1/szkic-do-tryptyku-%C5%9Bwi%C4%99ty-sebastian/">szkic do tryptyku Święty Sebastian</a></li>
+				<li><a href="/1/1/ba%C5%BCant-dzie%C5%84-czterdziesty-tryptyk/">bażant, dzień czterdziesty – tryptyk</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/1">grupy 1</a>
-				<h3>bażant, dzień czterdziesty – tryptyk</h3>
-				<p><strong><strong>prawe skrzydło:</strong></strong></p>
-<p>ma-i-a hi ma-i-a hu ma-i-a ho<br>
-ma-i-a ha-ha mam 13 lat i próbuję czytać Prousta<br>
-żeby nie być wieśniakiem i przenigdy nie pójść do wojska<br>
-ojciec przy stole mówi: nasza poetka Szymborska</p>
-<p>to był społeczny pasożyt<br>
-co nie chciał mieć dzieci – i patrzy krzywo<br>
-na żel do włosów za czereśnie<br>
-byłem pierwszy raz u fryzjera</p>
-<p>bo chciałem zacząć wyglądać<br>
-ładnie dotąd sam strzygł mnie<br>
-maszynką na jednym ostrzu<br>
-miałem hełm na łbie</p>
-<p>i myłem się żelem 10 w 1 – zobacz<br>
-no zobacz jakie to mięso jest kruche<br>
-i czarne – rozwalał brzuchy bażantom<br>
-Wiki: gr. φἀσιἀνος, „ptak znad rzeki Phasis”:</p>
-<blockquote>
-<p>złote piórka upaprane krwią<br>
-niestrawione ziarno wysypane z wola<br>
-odwracam wzrok<br>
-gdy wysychający język wije się</p>
-</blockquote>
-<blockquote>
-<p>po dziobie pije powietrze<br>
-miarowo podryguje<br>
-lufa<br>
-a miastowe to głupie chuje</p>
-</blockquote>
-<p>bo zobacz jakie to mięso jest kruche<br>
-i czarne a jak smakuje<br>
-ludzie naprawdę są głupimi chujami<br>
-kupują kurczaki z Leclerca</p>
-<p>faszerowane antybiotykami<br>
-zobacz jakie kolory są w tym rosole raz<br>
-pofarbowałem włosy na czarno<br>
-i w szkole zostałem Anią</p>
-<p>ze Spedalonego Wzgórza rudoczarny<br>
-twój los marny dragostea<br>
-din tei odchodzę od stołu bek bek<br>
-dziecku się odbiło dziecko będzie żyło</p>
-<p>bek bek<br>
-o przepraszam<br>
-Chryste nie ma<br>
-nie ma na świecie lepszego rosołu</p>
-<p><strong><strong>lewe skrzydło:</strong></strong></p>
-<p>I).</p>
-<p>najpierw zaczęło przeciekać z sufitu<br>
-tłuste oka na spoconej kołdrze<br>
-i otworzyły się z hukiem upusty nieba</p>
-<p>oczy wiśnie a nie czereśnie<br>
-dziękuję nie trzeba</p>
-<p>zasnąłem w meblościance jak w Titanicu<br>
-mijałem sennie rytm złotych bitów<br>
-kołysałem góry bażancich ciał</p>
-<p>II).</p>
-<p>okręt jebnął<br>
-o długą żylastą wieżę<br>
-wypadłem naga<br>
-wypadły ze mną:</p>
-<p>1). mordercze owce<br>
-2). leniwe pszczoły<br>
-3). zdradzieckie psy</p>
-<p><strong><strong>ołtarz, mama:</strong></strong></p>
-<p>chciał dobrze chciałeś<br>
-aparat kupił aparat<br>
-chciałeś komputer kupił komputer<br>
-między dwiema płytami skóry stała bordowa noc</p>
-<p>i oczki przykleiły ci się do ciemności:<br>
-nie drap bo się sprzeciwi</p>
-
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/1">grupy 1</a>
-		</section>
 	</body>
 </html>
-
