--- a/osoby/aleksandra-kasprzak/index.html
+++ b/osoby/aleksandra-kasprzak/index.html
@@ -1,48 +1,155 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Aleksandra Kasprzak Wydania  „Aleksandra Kasprzak” | POZa Linią</title>
+		<title>Aleksandra Kasprzak: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Aleksandra Kasprzak</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Aleksandra Kasprzak
+					<br>
+				</h1>
+
 			Aleksandra Kasprzak –  redaktorka naczelna ASZdziennika, autorka książki „Wydrąż mi rodzinę w serze” (2024, Biuro Literackie), reprezentantka Polski na Mistrzostwach Świata Slamu Poetyckiego w Paryżu (2024), fanka kotów i kaczek. Współmatka piesy Luny.
 
-				<h3>lesba</h3>
-				<p>(…)</p>
-<p>Mając dwanaście lat, oszukiwałam dziewczyny jak rasowy scamer. Jak turecki książę na BLIKa. Jak użytkownik Facebooka ze zdjęciem profilowym ze stocka zbierający pieniądze na „chorom curkę”.</p>
-<p>Pamiętam akcje społeczną w telewizji i w internecie, która krążyła z ust do ust niczym przestroga przed mitycznym słoneczkiem. Dorośli na każdym kroku ostrzegali: pod dwunastoletniego Wojtusia na czaterii może podszywać się pięcdziesięcioletni Kazimierz.</p>
-<p>Nauczyciele alarmowali. Im głośniej robiło się o czatach, tym bardziej mnie do nich ciągnęło, ciekawili mnie dorośli, patrzyłam im na ręce, z fascynacją obserwowałam woźnego klikającego w logo Windows XP. Czy udawał dziesięcioletniego Krzysia? Czy grał w Metina 2, logując się jako AndrzejekWafelek12?</p>
-<p>Bo ja tak. Byłam Krzysiem, Andrzejkiem, Marcinkiem, Antkiem. Jednak najdłużej i najintensywniej byłam czternastoletnim Kamilem – uczniem gimnazjum w Radomiu, który miał fryzurę jak Justin Bieber, słuchał Nickelback i interesował się historią Huncwotów z uniwersum Harry’ego Pottera. A przynajmniej tak go sobie wymyśliłam. To bardzo proste. Dwunastoletnia Ola z Sierpca bez problemu wcielała się w czternastoletniego Kamila z Radomia, wszystko było proste, naturalne i oczywiste, znalazłam zdjęcia jakiegoś czternastolatka na portalu Fotka.pl, pobrałam je na dysk, wycięłam w Paincie oznaczenie serwisu, kilka minut, Kamil jak ta lala.</p>
-<p>A to wszystko dla Karoliny. Czternastoletniej dziewczyny, którą poznałam w grze RPG o tematyce czarodziejskiej. Jej postać miała na imię, oczywiście, Caroline, jako iż Karolina nie miała problemów ze swoją orientacją i tożsamością w przeciwieństwie do queerowego dzieciaka z miasta, które nawet obok Radomia nie stało. Tak powstał Heathcliff – zamknięty w sobie Ślizgon, który nie uczestniczy w zakrapianych imprezach w Hogsmeade, bo zamiast tego buszuje po Zakazanym Lesie i marzy o równie zakazanej miłości. Wymowne? Hehe.</p>
-<p>Mój stan psychiczny w wieku czternastu lat dobrze oddaje internetowa angedota – udostępniłam na Facebooku obrazek z podpisem: „Gdyby życie było komputerem i można by było uruchomić je ponownie, zrobiłbyś to?”.</p>
-<p>Dopisałam: reset, reset, reset.</p>
-<p>Ciarki wstydu, wymiotnik żenady.</p>
-<p>Kamil powstał, bo Karolina napisała do mojej postaci, Heathcliffa, w wiadomości prywatnej. Serce waliło mi, jakby wessało sto energoli, o boże, napisała, że ma na imię Karolina, brzydki design chatu, zero namysłu, hej, jestem Kamil. Wiedziałam, że to moja jedyna szansa, komputer chronił mnie przed wścibskim wzrokiem księdza, rówieśnikami i rodzicami. Potencjał flirtu.</p>
-<p>Wysyłałyśmy sobie piosenki (ja jej – myslovitz, ona mi – happysad), chciałam być idealnym chłopakiem, przystojniakiem, gigachadem, simpem, wszystkim, czymkolwiek, pisać jej idealnie romantyczne wiadomości, nie być jak inni chłopcy, nie być jak inne dziewczyny, mieszkać idealnie daleko, mieć dziewczynę, nie mając dziewczyny, być jej chłopakiem, nie będąc nim.</p>
-<p>Wszystko było wspaniałe, romantyczne i tajemnicze, dopóki nie wymknęło się spod kontroli.</p>
-<p>Złamała zasady. Prawie popuściłam, gdy Karolina zadzwoniła do mnie znienacka z telefonu koleżanki.</p>
-<p>Pocę się na samo wspomnienie. To jak retro teledysk. Odbieram połączenie od nieznanego numeru. Mówię: halo? Zmieszanie, szuranie, chichot.</p>
-<p>Możemy prosić Kamila?</p>
-<p>Rozłączam się.</p>
-<p>Karolina raczej nic nie podejrzewała. Napisała: „co jest?”. Czułam, że wali mi się cały świat, chciałam za wszelką cenę zachować ją dla siebie, więc zapewniłam ją, że ups, sory, to moja młodsza siostra, Ola, czasem pozwalam jej grać na telefonie.</p>
-<p>Obróciłam sytuację na swoją korzyść, wpadając z jednego kłamstwa w kolejne, straciłam kontrolę. Wcześniej wmawiałam sobie, że jedyne kłamstwo to płeć. I imię. I wygląd. Poza tym byłam przecież sobą, wysyłałam Karolinie swoje ulubione piosenki, pisałam jej to, co pisałabym jako ja, potrzebowałam tylko słupa, powłoki, męskiej szczęki. Gdybym tylko mogła, wyszarpałabym jakiegoś Kamila z ciała i wcisnęła mu swój mózg przez oczy. Tak bardzo chciałam być Kamilem, chciałam kochać Karolinę, mieć czternaście lat, chciałam, żeby to było proste i oczywiste jak kolejność przyrządzania płatków z mlekiem (najpierw mleko, potem płatki).</p>
-<p>Weszłam w to na pełnej. Stworzyłam nowy numer Gadu-Gadu, specjalnie dla zmyślonej siostry Kamila, coraz grubsze nici kłamstwa, zapłakany genderowy pająk, który więzi w sieci innego pająka.</p>
-<p>Najbardziej mnie boli, że zrobiłam coś takiego dziewczynie. Czy z mężczyzną byłoby łatwiej? Czuję wstyd za to myślenie.</p>
-<p>Zniknęłam z życia Karoliny, usunęłam z siebie Kamila, bo za bardzo się bałam. Bałam się, że skończymy piętnaście, szesnaście, siedemnaście lat, Karolina będzie chciała chłopaka z prawdziwego zdarzenia, nie wirtualnego, że zobaczy we mnie Olę, że będę musiała zmyślić śmierć brata, że zaprzyjaźnię się z Karoliną jako Ola, że zakocham się w niej jako Ola, a ona uzna, że nie może ze mną być, bo to kazirodztwo.</p>
-<p>Czy powinnam odnaleźć ją w internecie i przeprosić?</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/2">grupy 2</a>
-		</section>
+<ul>
+				<li><a href="/1/2/lesba/">lesba</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
+
 	</body>
 </html>
-
