--- a/osoby/anna-maria-wierzchucka/index.html
+++ b/osoby/anna-maria-wierzchucka/index.html
@@ -1,62 +1,156 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Anna Maria Wierzchucka Wydania  „Anna Maria Wierzchucka” | POZa Linią</title>
+		<title>Anna Maria Wierzchucka: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Anna Maria Wierzchucka</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Anna Maria Wierzchucka
+					<br>
+				</h1>
+
 			Anna Maria Wierzchucka – wierzchucka dwojga imion, feministka, ateistka, osoba biseksualna, larwa, poetka, artystka recyklingująca, babcia. Mieszkała w Irlandii i Nowej Zelandii, obecnie osiadła w Kanadzie.
 
-				<h3>raport cząstkowy o chrząstkach. winter wine</h3>
-				<p>miednica. nad dziewczynka.<br>
-łowi łyse ryby. woda kapie.<br>
-po bosych. płytkach. emalii.<br>
-nadtłuczonej. nadtłuszczonej.<br>
-w czarne kropki. dziewczynka.<br>
-w kusej. ryba łypie. w kałuży<br>
-okno. za oknem szarak dolewa<br>
-do pełni. ale nie jakoś nachalnie.<br>
-mikroplastik opada. ze śniegiem.<br>
-wyłażą. gwiazdy całymi<br>
-galaktykami. szarak leje z dzbana.<br>
-światło kradzione słońcu. futerko<br>
-błyszczy. strzyże wyroślami.<br>
-chimery. chrzęstnoszkieletowe.</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-				<h3>matka mothra. mosura ya mosura. mamorigami</h3>
-				<p>matka rozkurcza<br>
-wychodzi z wody solona jak śledź<br>
-ściera pomarszczone tatuaże<br>
-obcieka<br>
-w ostatnim skrzepie<br>
-malutka larwa<br>
-tak samo senna i drażliwa<br>
-blizna (sinokoperkowy róż)<br>
-po cesarce zarasta łuską<br>
-utknięta upchana uwikłana<br>
-koszerna<br>
-w miłości</p>
-<p>matka poszcząca<br>
-matka sucharek</p>
-<p>wyczytuje bajki ze śnieżącego telewizora<br>
-głęboko niewierząca w anny<br>
-na wiosnę wystawi pusty kokon</p>
+<ul>
+				<li><a href="/1/3/raport-cz%C4%85stkowy/">raport cząstkowy o chrząstkach. winter wine</a></li>
+				<li><a href="/1/3/matka-mothra/">matka mothra. mosura ya mosura. mamorigami</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-		</section>
 	</body>
 </html>
-
