--- a/osoby/bianka-rolando/index.html
+++ b/osoby/bianka-rolando/index.html
@@ -1,64 +1,157 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Bianka Rolando Wydania  „Bianka Rolando” | POZa Linią</title>
+		<title>Bianka Rolando: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Bianka Rolando</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Bianka Rolando
+					<br>
+				</h1>
+
 			Bianka Rolando – Urodziła się w 1979 roku w Warszawie, poetka, artystka, wykładowczyni. Stale współpracuje z Galerią Foksal w Warszawie. Jest autorką książek: „Absyda” (2024). „Abrasz” (2022), „Ostańce” (2020), „Stelle” (2018), „Pascha” (2016), „Łęgi” (2015), „Podpłomyki” (2012), „Modrzewiowe korony” (2010), „Biała książka” (2009), „Rozmówki włoskie” (2007).
 
-				<h3>Oceany</h3>
-				<p>Na dziecinnej harmonijce małej fali zagra dziś ocean<br>
-Zobacz, jak wspina się na drabinkę przeciwpożarową<br>
-tak dzielnie wschodzi ciałem po kolejnych szczeblach<br>
-kręgosłupa dzikiej ryby (wybrał ją sobie z własnego dna)<br>
-Uwolnił szum jak lichą tratwę (bawi się sznurami brzegu)<br>
-i w pomarszczonej mapie dłoni wywróżył ci podobieństwa<br>
-powtarza je ciszej, łagodniej, tak przypomina sobie wszystko</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-				<h3>perfekcyjna burza</h3>
-				<p>Róż jutrzenki błyszczy pozorami, zerwana tapeta to tylko kwestia kilku ruchów, dalej<br>
-w pochyleniu drzew, jest i wiatr, ash, ash i bash! Niech bęben, niech kociołek!<br>
-Łychą głodu trzaskaj w dno, może obudzi płomień, twoja ślepa orkiestra z korzeni<br>
-w ciemności rozbłyska łącznością, zaczyna radosne huczenie, spiętrzenie, strojenie<br>
-bo ciepłe zaklęcie gotowe bulgocze w objęciach miedzianej trąbki, która odpuszcza<br>
-swojej formy umowne granice, ulega, chce być w tym wirze, nie w jego ograniczeniu<br>
-A potem jest miłość, i ja to mówię? Kto by się spodziewał deszczu co z-burzy koniec</p>
+<ul>
+				<li><a href="/1/4/oceany/">Oceany</a></li>
+				<li><a href="/1/4/perfekcyjna-burza/">perfekcyjna burza</a></li>
+				<li><a href="/1/4/piosenka-jamajskiego-pracownika-na-promie/">piosenka jamajskiego pracownika na promie</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-				<h3>piosenka jamajskiego pracownika na promie</h3>
-				<p>Dziś srebrzyście się rozchodzi światło, znowu pałace!<br>
-No, ale wielu wybrało łańcuchy, część z nich pracuje<br>
-w porcie, większość jednak w wysokich budynkach<br>
-i nie mają pojęcia o tym pojęcia, co ciągną od dawna<br>
-Przychodzą tu czasem głośno żebrząc czyjejś uwagi<br>
-opowiadając o zyskach, są tacy zapalczywi w gniewie<br>
-A jeden z nich pogardliwie patrząc na mnie zapytał<br>
-co tak mnie cieszy, gdy patrzę na brudnej wody ruch<br>
-Uśmiechnąłem się cichutko, bo wiedziałem przecież<br>
-nie zrozumie mojej odpowiedzi i dokąd ona zmierza<br>
-Wyszeptałem bardzo powoli, żeby się tym chwilę zajął<br>
-„Mój uśmiech to dwanaście kamizelek ratunkowych<br>
-dla dzieci, naprawdę nie umiem to panu wytłumaczyć<br>
-bez wiersza, który pozwala im śpiewać w kołnierzach fal”</p>
-
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-		</section>
 	</body>
 </html>
-
