--- a/osoby/jan-mokrzycki/index.html
+++ b/osoby/jan-mokrzycki/index.html
@@ -1,74 +1,157 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Jan Mokrzycki Wydania  „Jan Mokrzycki” | POZa Linią</title>
+		<title>Jan Mokrzycki: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Jan Mokrzycki</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Jan Mokrzycki
+					<br>
+				</h1>
+
 			Jan Mokrzycki – (ur. 1998) – poeta, slamer. Student sztuki pisania na UAM. Nominowany do XXX Ogólnopolskiego Konkursu Poetyckiego im. Jacka Bierezina, Zwycięzca XIX Turnieju Jednego Wiersza o Czekan Jacka Bierezina. Do tej pory jego teksty ukazywały się w antologiach slamerskich, „Dwutygodniku”, „Składce”, „Tlenie literackim” oraz zinach „I bite back” i „brokat”. Człowiek typu fototropicznego, cokolwiek to znaczy.
 
-				<h3>Kiedy zaczyna się sjesta, postanawiamy zjechać</h3>
-				<p><span style="display:inline-block;width:8ch"></span><em>Fellipo Bentivegnie</em></p>
-<p>Widzę go w jaskini, skulonego; w półmroku<br>
-rzeźbi skałę, pomnaża. Widzę go</p>
-<p>w chatce, otoczonego miastem;<br>
-światło wpada przez okno na okna,</p>
-<p>na rybę, która pożera i niesie narybek<br>
-by go wypuścić na wybrzeże, skapitalizować.</p>
-<p>Tu, w Sciacci, jest kim władać; nowi każdego dnia<br>
-dołączają  - w kamieniu i w drzewie, w ścianie i w skale -<br>
-szlachcice, magnaci, żony, zielarki, lichwiarze i kupcy,<br>
-dzieciaki, wapienne grymasy, trójgłowi poddani<br>
-pączkujący, wyrastający zewsząd; przeciągnięci</p>
-<p>rudą ochrą, która zostaje na moich opuszkach; pytam<br>
-kim jest ten, który was opuścił?</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-				<h3>Kiedy do niego wjeżdżamy, miasto pokrywa chmura;</h3>
-				<p>z dołu jest niewidoczne. Światło latarń, rozproszone<br>
-kule; opar, który płynie ulicami. Nikogo tu nie ma,<br>
-dopiero kiedy wchodzimy do kościoła wita nas</p>
-<p>energiczna włoszka. W swoim języku opowiada miejsce;<br>
-wplata very bjutiful cyk cyk cyk, jej dłonie imitują<br>
-naciskanie migawki. Ulegamy. Tablice pamiątkowe,<br>
-groby obcych żołnierzy - żarty pleśnią, tani barok.</p>
-<p>Po wyjściu w mgłę usuwam z telefonu zdjęcia.<br>
-Marzną mi palce, gdy znika ołtarz i nowoczesne witraże<br>
-z mężczyznami trzymającymi karabiny, znika przewodniczka;</p>
-<p>przypadkiem usuwam też ulice, kocie łby i szyldy restauracji;<br>
-jest nam coraz zimniej, kurtki pokrywa wilgoć,<br>
-biel nachodzi pasmami, falą;<br>
-nie<span style="display:inline-block;width:3ch;"></span>ma<span style="display:inline-block;width:6ch;"></span>gdzie  			</p>
+<ul>
+				<li><a href="/1/4/kiedy-zaczyna-si%C4%99-sjesta/">Kiedy zaczyna się sjesta, postanawiamy zjechać</a></li>
+				<li><a href="/1/4/kiedy-do-niego-wje%C5%BCd%C5%BCamy/">Kiedy do niego wjeżdżamy, miasto pokrywa chmura;</a></li>
+				<li><a href="/1/4/kiedy-schodzimy-ku-wodzie/">Kiedy schodzimy ku wodzie, spod moich stop uciekają jaszczurki</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-				<h3>Kiedy schodzimy ku wodzie, spod moich stop uciekają jaszczurki</h3>
-				<p>Żeby dojść do źródeł trzeba przekroczyć rzekę; niosę<br>
-telefony w torbie, tanie klapki w mule. To już trzecie<br>
-zanurzenie: w gorącym stawie, w siarkowodorze.</p>
-<p>Jest tu na tyle paro, że wyrasta dzika kalia; miejscowi wystawiają brzuchy.<br>
-Ich przodków zabalsamowano w podziemiach, wiszą pod ścianami<br>
-na wiecznej wystawce: 10 euro za praktyki z trwogi.</p>
-<p>U mnie pierwszy w sezonie krótki rękaw, trochę na wyrost;<br>
-wyszukuję plamy ze słońca, unikam zacienionych uliczek.<br>
-Sprawdzasz w soczewce google przydrożny kwiat, kiedy kupuję płonące<br>
-ceramiczne serce.</p>
-
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-		</section>
 	</body>
 </html>
-
