--- a/osoby/karolina-kurando/index.html
+++ b/osoby/karolina-kurando/index.html
@@ -1,106 +1,155 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Karolina Kurando Wydania  „Karolina Kurando” | POZa Linią</title>
+		<title>Karolina Kurando: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Karolina Kurando</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Karolina Kurando
+					<br>
+				</h1>
+
 			Karolina Kurando – krytyczka literacka, kulturoznawczyni, antropolożka kultury. Autorka bloga krytycznoliterackiego Books Silence. Pisze o współczesnej prozie światowej, czasami o poezji. Zajmuje się twórczością Jerzego Pilcha i Édouarda Louisa. Interesuje się animal studies, literaturą Młodej Polski oraz historią sztuki. Teksty krytyczne publikowała m.in. w „biBLiotece” Biura Literackiego, „Kontencie” i „Stronie Czynnej”. Since ’96, Kraków/Podhale.
 
-				<h3>Nie chodzi o sacrum. Kinga Sabak, „Trochę z zimna, trochę z radości”</h3>
-				<div class="pindent">
-<p>Debiut Kingi Sabak, wicenaczelnej MINT Magazine, spolaryzował czytelniczki i czytelników – opinie o <em>Trochę z zimna, trochę z radości</em> (Wydawnictwo W.A.B. 2024) są albo bardzo pozytywne (Renata Lis, Justyna Sobolewska, Eliza Kącka – blurbujące książkę<a id="fnref1" href="#fn1" role="doc-noteref"><sup>1</sup></a>, Artur Hellich<a id="fnref2" href="#fn2" role="doc-noteref"><sup>2</sup></a>), albo bardzo negatywne (Olga Wróbel<a id="fnref3" href="#fn3" role="doc-noteref"><sup>3</sup></a>, Zuzanna Sala<a id="fnref4" href="#fn4" role="doc-noteref"><sup>4</sup></a>). Rzadko pojawiają się głosy lokujące się gdzieś pomiędzy.</p>
-<p>Z czego wynika tak wyraźny podział? Prawdopodobnie z faktu, że Sabak napisała autofikcję (autorka wspomina o tym m.in. w rozmowie z Małgorzatą Sikorą-Tarnowską opublikowanej w „Replice”<a id="fnref5" href="#fn5" role="doc-noteref"><sup>5</sup></a>) i na pierwszy plan wystawiła queer i polską wieś. Tło stworzyła przezroczyste, a więc stosunkowo uniwersalne, przez co procent osób, które mogą utożsamić się w jakimś stopniu z historią snutą przez debiutantkę, znacznie wzrósł. I jednym to nagromadzenie dobrze znanych już puzzli spodobało się, drugim – nie. Należę do pierwszej grupy – mnie się podobało.</p>
-<p>Nie nazwę autorki prozatorską rewolucjonistką, łamaczką literackich konwencji, ale przyznam: zadebiutowała nieźle. Bezpiecznie – ponieważ w swoim zbiorze opowiadań porusza się po ścieżkach już wydeptanych w polskiej prozie ostatnich lat. Dorastanie poza wielką metropolią, awans społeczny, kwestie tożsamościowe, wstyd – we know it well. Sabak rozmontowuje jednak pewne schematy wykorzystując kapitał duchowy/religijny swojej bohaterki. Dla Oli, Alex, Olka – takimi imionami przedstawia się dziewczyna – wiara, będąca pozostałością po wychowywaniu się na wsi pod czułym okiem babki, jest jednym z trwalszych, jeśli nie fundamentalnych, segmentów życia. Jednocześnie nie oznacza to, że relacja z Bogiem, do którego bohaterka w pewnym momencie zwraca się per „Tato”, jest łatwa. Nie jest. Przybierając różne formy pozostaje jednak jednym z niewielu niezmiennych, niemożliwych do naruszenia elementów świata Alex; elementem, którego dziewczyna kurczowo się trzyma (i którego utraty ze względu na bycie osobą homoseksualną się boi), o czym świadczy jej udział, już jako dorosłej, w Warszawskiej Pielgrzymce Akademickiej, czy wyjazd na rekolekcje, które, zgodnie z zasadami, ma spędzić w milczeniu, nie patrząc współuczestnikom w oczy. Religia pełni tutaj jeszcze inną funkcję, prostą, oczywistą: społeczną. Ola próbuje odnaleźć się wśród uczestniczek i uczestników chrześcijańskich spotkań, wyjazdów. Bohaterka szuka siebie, ale też po prostu relacji i swojego miejsca w grupie, chce gdzieś przynależeć. Alex pragnie stałości – ma rację Olga Wróbel, pisząc na łamach „Dwutygodnika”, że bohaterka prozy Sabak jest w ciągłym ruchu<a id="fnref6" href="#fn6" role="doc-noteref"><sup>6</sup></a> – a tej stałości z pewnością nie dają jej ani awans społeczny (przeprowadzka ze wsi do miasteczka, a później do dużego miasta), ani próby zdefiniowania swojej tożsamości, określenia orientacji, przyklejenia samej sobie etykiet. Wiara ma pomóc jej się na chwilę zatrzymać.</p>
-<p>Desekularyzacja młodzieńczego, dynamicznego świata jest tym, co u Sabak najciekawsze. Przyjęło się, że wiara nie jest seksowna – często idzie w parze ze wstydem, zwłaszcza w przypadku młodych ludzi. Pobożność często wiąże się z terenami wiejskimi i ich mieszkańcami, a więc stereotypowo gorszymi, uboższymi, mniej wykształconymi. Wspominają o tym Justyna Struzik, Ewa Furgał i Natalia Sarata w tekście <em>„Nikt nie chce być w sferze nieistnienia”. Lesbijki, wieś i Kościół</em> opublikowanym w „Miesięczniku Znak” we wrześniu 2017 r.: „Skrzyżowanie pewnej grupy wyobrażeń na temat religijności i wsi jest częstą kalką używaną do opisu tego, co w Polsce »prowincjonalne«, »zacofane« i »nietolerancyjne«”<a id="fnref7" href="#fn7" role="doc-noteref"><sup>7</sup></a>. Idąc tym tropem, awans społeczny Alex byłby sabotowany przez konotacje związane z religią chrześcijańską. Autorka rozbija te szkodliwe przekonania i pokazuje po pierwsze, że można wierzyć i być <em>cool</em>, a po drugie, że wiara nie oznacza samotnego umartwiania się w kącie ciemnego, przesiąkniętego duszącym zapachem kadzidła kościoła. Wręcz przeciwnie: Sabak w <em>Trochę z zimna…</em> postuluje, że religia to relacje – budujące ognisko domowe i życie poza nim. Rola religii w życiu Oli odpowiada młodzieńczej potrzebie „zakorzenienia”, o której – obok potrzeby „eksperymentowania” – pisze Maria Sroczyńska w artykule <em>Młodzież w poszukiwaniu sacrum. Rozważania socjologiczne</em><a id="fnref8" href="#fn8" role="doc-noteref"><sup>8</sup></a>. Co prawda Alex prędzej nazwiemy młodą dorosłą niż nastolatką, wiemy jednak, że wiara jest poniekąd językiem miłości między nią a babką – bohaterka chodzi z nią do kościoła, rozmawia przez telefon o wędrującym po wsi świętym obrazie – ucieleśniającą dzieciństwo i wiejskie korzenie Oli.</p>
-<p>Piszę wcześniej o <em>Trochę z zimna, trochę z radości</em> jako o „zbiorze opowiadań”, ponieważ sama autorka w licznych wypowiedziach medialnych w takich właśnie ramach umieszcza swoją prozę (m.in. w rozmowie z Jakubem Wojtaszczykiem dla „Vogue’a”<a id="fnref9" href="#fn9" role="doc-noteref"><sup>9</sup></a>), myślę jednak, że spokojnie można ją czytać – ja tak zrobiłam – jako poszatkowaną, fragmentaryczną powieść. Sabak, przejmując pałeczkę m.in. po Annie Ciarkowskiej i jej Dewocjach (Wydawnictwo W.A.B. 2021) debiutuje naprawdę ciekawie, przede wszystkim dzięki graniu napięciem pomiędzy autentyczną, mocno zakorzenioną w człowieku wiarą a oswajaniem, eksplorowaniem przez niego swojej homoseksualności.</p>
-</div>
-<p></p>
-<section role="doc-endnotes">
-<hr>
-<ol>
-<li id="fn1">
-<p>Idealistycznie staram się wierzyć w wiarygodność instytucji blurbów.<a href="#fnref1" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn2">
-<ol type="A">
-<li>
-Hellich, Kto ma zabić szczura w łazience? Recenzja „Trochę z zimna, trochę z radości” Kingi Sabak, „Kultura Liberalna”, nr 824(43/2024), 22.10.2024, https://kulturaliberalna.pl/2024/10/22/artur-hellich-recenzja-kinga-sabak-troche-z-zimna-troche-z-radosci.
-</li>
-</ol>
-<p><a href="#fnref2" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn3">
-<ol start="15" type="A">
-<li>
-Wróbel, Nie grzeje, https://www.dwutygodnik.com/artykul/11596-nie-grzeje.html.
-</li>
-</ol>
-<p><a href="#fnref3" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn4">
-<ol start="26" type="A">
-<li>
-Sala [@pytaniazsali], Skończyłam debiut Kingi Sabak „Trochę z zimna, trochę z radości”…, Instagram, 20.12.2024, https://www.instagram.com/p/DDzGtYzOXOT/?igsh=eDRnbzU3dXBlcXEx.
-</li>
-</ol>
-<p><a href="#fnref4" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn5">
-<ol start="11" type="A">
-<li>
-Sabak, Kinga Sabak i jej debiutancki zbiór opowiadań, które łączy bohaterka-lesbijka, rozm. przepr. M. Sikora-Tarnowska, „Replika”, nr 113 (styczeń/luty 2024), https://replika-online.pl/kinga-sabak-i-jej-debiutancki-zbior-opowiadan-ktore-laczy-bohaterka-lesbijka.
-</li>
-</ol>
-<p><a href="#fnref5" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn6">
-<ol start="15" type="A">
-<li>
-Wróbel, dz. cyt.
-</li>
-</ol>
-<p><a href="#fnref6" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn7">
-<ol start="10" type="A">
-<li>
-Struzik, E. Furgał, N. Sarata, „Nikt nie chce być w sferze nieistnienia”. Lesbijki, wieś i Kościół, „Miesięcznik ZNAK”, nr 748, wrzesień 2017, https://www.miesiecznik.znak.com.pl/nikt-nie-chce-byc-w-sferze-nieistnienia-lesbijki-wies-i-kosciol.
-</li>
-</ol>
-<p><a href="#fnref7" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn8">
-<ol start="1000" type="I">
-<li>
-Sroczyńska, Młodzież w poszukiwaniu sacrum. Rozważania socjologiczne, „Przegląd Religioznawczy”, nr 2(276)/2020, s. 113–128.
-</li>
-</ol>
-<p><a href="#fnref8" role="doc-backlink">↩︎</a></p>
-</li>
-<li id="fn9">
-<ol start="11" type="A">
-<li>
-Sabak, Kinga Sabak o poszukiwaniu tożsamości w mocnym debiucie „Trochę z zimna, trochę z radości”, rozm. przepr. J. Wojtaszczyk, „Vogue”, 19.10.2024, https://www.vogue.pl/a/wywiad-z-kinga-sabak-autorka-debiutanckiej-ksiazki-troche-z-zimna-troche-z-radosci.
-</li>
-</ol>
-<p><a href="#fnref9" role="doc-backlink">↩︎</a></p>
-</li>
-</ol>
-</section>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/2">grupy 2</a>
-		</section>
+<ul>
+				<li><a href="/1/2/nie-chodzi-o-sacrum/">Nie chodzi o sacrum. Kinga Sabak, „Trochę z zimna, trochę z radości”</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
+
 	</body>
 </html>
-
