--- a/osoby/katarzyna-fabisiewicz /index.html
+++ b/osoby/katarzyna-fabisiewicz /index.html
@@ -1,62 +1,156 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Katarzyna Fabisiewicz Wydania  „Katarzyna Fabisiewicz” | POZa Linią</title>
+		<title>Katarzyna Fabisiewicz: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Katarzyna Fabisiewicz</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Katarzyna Fabisiewicz
+					<br>
+				</h1>
+
 			Katarzyna Fabisiewicz – urodziła się w Ostrołęce, z którą jest związana twórczo. Wykształcenie humanistyczne w kierunkach: historia, archeologia, bibliotekoznawstwo. Ukończyła Studium Literacko-Artystyczne na Wydziale Polonistyki Uniwersytetu Jagiellońskiego. Lubi śpiewać kurpiowskie pieśni żałobne i leśne. Nagradzana w ogólnopolskich konkursach poetyckich i prozatorskich. Opublikowała trzy książki poetyckie: „Rapsodyczny” (TPO, 2017), „Bajkonury” (Wydawnictwo Fundacja Duży Format, 2023), „Kamień, Papier, Maszyna” (Wydawnictwo Fundacja Duży Format, 2025). Publikowała między innymi w: „FRAZIE”, „Rewirach”, „Przydrożach”, kwartalniku literackim: „Strona Czynna”, stronie „Wydawnictwa j”, „Babińcu Literackim”, zinie „PÜF – PUF” oraz licznych antologiach, np.: „Jakie czasy taki diabeł”, „SLApidarium”.
 
-				<h3>eternit</h3>
-				<p>chleb kojarzy się tylko z glutenem<br>
-miętus z węglowodanami<br>
-wieś z dymem z przydomowych hut i elektrowni</p>
-<p>człowiek drugi – pierwszy ostatni<br>
-reszta liczebników miesza się<br>
-porowata masa wilgotne mięso białko</p>
-<p>żaden odkrywczy byt tylko operacja<br>
-na żywym organizmie zmiana funkcji<br>
-pokarm dla bogów chów stadny</p>
-<p>coś podpowiada napięcie powierzchniowe<br>
-zjawisko osmozy sieciowanie<br>
-rozmowa półprzepuszczalna membrana<br>
-skąpe fragmenty chrupiąca skórka</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/2">grupy 2</a>
-				<h3>dotknięci</h3>
-				<p>niektórzy po to się narodzili by patrzyć na rzekę<br>
-inni aby o tym pisać – wiejski głupek by opowiadać<br>
-o swoim garbatym bogu siedzącym na progu</p>
-<p>jak będziesz niegrzeczna przyjdzie heniutek<br>
-i cię złapie za nogę – matki mają swoje metody<br>
-cykl natury ranking demonów figury retoryczne<br>
-i oporządek</p>
-<p>a heniutek spał na miedzy jakby stwórca wymyślił noc<br>
-tylko dla niego – śnił że spotkał podobnego sobie<br>
-razem ukradli konia i przenieśli go przez rzekę</p>
-<p>poeta dogorywał po krótkim ataku szaleństwa<br>
-lub geniuszu w sielskim lecie nie wiadomo kiedy<br>
-mała genia zaczęła niedomagać i cierpieć na bezsenność<br>
-śniła na jawie o heniutku z jej chodakiem w ręku<br>
-krzyczała po nocach – matka szukała pomocy w internecie</p>
-<p>głazy dalej łypały na rzekę<br>
-tylko heniutek wiedział<br>
-po co je tam diabły posiały</p>
+<ul>
+				<li><a href="/1/2/eternit/">eternit</a></li>
+				<li><a href="/1/2/dotkni%C4%99ci/">dotknięci</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/2">grupy 2</a>
-		</section>
 	</body>
 </html>
-
