--- a/osoby/michał-domagalski/index.html
+++ b/osoby/michał-domagalski/index.html
@@ -1,35 +1,155 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Michał Domagalski Wydania  „Michał Domagalski” | POZa Linią</title>
+		<title>Michał Domagalski: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Michał Domagalski</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Michał Domagalski
+					<br>
+				</h1>
+
 			Michał Domagalski – eseista, prozaik, poeta. Autor „Poza sezonem” (2018) (nominacja do Nagrody Poetyckiej Silesius i do Nagrody im. Kazimiery Iłłakowiczówny), „za lasem/” (2021) i zbioru esejów „Koniec jest zawsze bliski. Work in progres” (2025). Stypendysta Marszałka Województwa Wielkopolskiego w dziedzinie kultury. Publikował w czasopismach (m.in. „Przekrój”, „Odra”, „Pole”, „Wyspa”, „Kontent”, „Stoner polski”, „Afront”, „biBLioteka”, „Strona Czynna”, „Tlen Literacki”, „Elewator”) i antologiach (m.in. „Odwrócona strefa”, „Romantyczność 2022”, „Włoski polskie”, „Przewodnik po zaminowanym terenie 2”, „Małe życie po wielkiej zmianie”, „Połów. Poetyckie debiuty 2014-2015”). Współredaktor antologii „Wakacje od istnienia” (2020).
 
-				<h3>C249</h3>
-				<p>Widziałeś kiedyś korytarz na onkologii? Czekałeś kiedyś w kolejce na wizytę z nadzieją, że nie masz przerzutów? Że nie na ciebie rzuci się cień tego potwora, będącego mutacją wewnątrz ciebie, jakby to organizm sam siebie chciał zniszczyć. Jakby nie umiał sobie poradzić z istnieniem. Liczysz, że może to nie ciebie organizm robi w chuja, to nie on ma wizje samobójcze albo samodestrukcyjne. Może to nie w twoim organizmie tkwi ta wada, ta konsekwencja złożoności, jakiej się dochrapaliśmy po latach ewolucji. Ale póki nie wejdziesz, nie wiesz. A jeszcze nie wejdziesz, bo nie ma lekarki. A miała być. Od ósmej. Twoja wizyta wyznaczona na ósmą czterdzieści się przesuwa. Bo nie ma lekarki. Na zegarku masz dziewiątą. Gabinet zamknięty.</p>
-<p>Obok ktoś się cieszy. Nie ukrywa nawet radości. Jakieś dwoje drzwi dalej od tych, za którymi nie ma jeszcze lekarki, znajduje się Poradnia Badań Genetycznych. I to właśnie po wyjściu z tej Poradni Badań Genetycznych ktoś nie ukrywa radości. A kurwa mógłby. Bo jakby nie zgrywa się to z resztą korytarza. W którym panuje ta mroczna aura, jaką wydobywa z umysłów słowo nowotwór. Korytarz jest zapchany. Gdzieś na końcu wywołują nazwiska przyjmowanych na oddział. Trochę jakby na skazanie. Wstają i idą, w zamyśleniu. A ta kobieta – cieszy się. Nie umie tego ukryć. Słychać w jej głosie ulgę, gdy mówi do swoich najbliższych. Jej los był lepszy niż na loterii. Duży Lotek, olbrzymi. Kurwesko wielki. Bo gdybyś miał wybrać miliard w środę albo miliard w sobotę, to wolałbyś wybrać życie. Jebać miliardy. Patrzysz na tę uśmiechniętą babę i przypomina ci się dowcip opowiedziany kiedyś przez aptekarza, może nawet z tytułem naukowym magistra farmacji (nie wiesz, nie sprawdzasz kwalifikacji ludzi, a przynajmniej robisz to rzadko, a może powinieneś częściej?): gdyby wysokość ceny miała zapewniać skuteczność, to Steve Jobs by jeszcze żył. Dowcip, który cię nie może śmieszyć. Jeden z tych, które rozumiesz, ale nie bawią, wiesz, jak został zbudowany z odwiecznych elementów żartu, ale nie śmieszy. Przynajmniej ciebie. Bo to ty jesteś tym popsutym mechanizmem. Bo dotyka, chociaż nie wprost, nie tylko Steve’a Jobsa, ale także ciebie. Ale także sporej części ludzi na korytarzu szczelnie wypełniających plastikowe krzesła, którym nieodmiennie pękają oparcia tak, żeby skutecznie przyszczypnąć ci koszulkę, bluzę, kurtkę, żebyś miał zniszczone nie tylko zdrowie.</p>
-<p>Ale ona by rechotała, czujesz, że ona by rechotała, wbrew całemu korytarzowi – starym oknom, smutnym pacjentom i nieobecności lekarki, która staje się elementem tej sytuacji. Wielka wygrana jednej kobiety nie pomaga. Wygrała na loterii. Badania genetyczne to potwierdziły. Matka nie przekazała jej genów, które mogłyby skazać ją na te same smutne przygody. Przez chwilę myślę o tym, czy ucieszyłaby się, gdyby właśnie te badania genetyczne wykazały również, że to nie jej matka, że dawno temu podmienili niemowlę w szpitalu. W zupełnie przypadkowy sposób. I że te wszystkie obawy poszły w pizdu, bo matka – co nie uległo zmianie – nadal umiera, ale to nie jest już jej matka. To matka innej córki. Córki jej prawdziwej matki. Biologicznej matki. Tak, to bardziej pasuje niż matka prawdziwa. Tam gdzieś jest ta matka i ta niebiologiczna córka. Ciągle nieświadoma. Że wychowywali ją nie jej rodzice. I ciągle nieświadoma tkwiącego gdzieś w genach zagrożenia. I może któregoś dnia biologia się odezwie w zupełnie inny sposób niż tylko w postaci podejrzenia faceta (niebiologicznego ojca), że został zdradzony, że wychowuje nie swoje dziecko. Zagrożenie odezwie się w postaci tych nazw pustych i jednoznacznych: mięsak, czerniak, chłoniak. Albo w wersjach o wiele bardziej archaicznych, pobrzmiewających kulturą antyczną: neoplasma malignum, choroid plexus papilloma. Chociaż nie wiem, którą z tych nazw można nosić jak rodzinne klejnoty, dziedziczyć jak spadek, o który nikt nie chce się kłócić, którego nikt nie chce przejąć, a przed którym nikt nie może uciec. Nie wiem, bo ten stan, w którym się znalazłem, a na który nie miałem wpływu, każe mi się trzymać z daleka od czytania o wszelkich chorobach – boję się, że wszystko będzie się nawarstwiać w moim umyśle, a może w moim mózgu, co chyba coraz częściej na jedno wychodzi. Nawarstwi się i finalnie przekona go do posiadania tego, czego nie chciałbym posiadać. Że czarne myśli rozejdą się niczym… nowotwór. Czy tu nomen naprawdę omen?</p>
-<p>Ale ta kobieta na korytarzu, ona ocalała, a jeszcze kilka minut temu, jeszcze przed odebraniem wyniku badań przeprowadzonych już przecież wcześniej wyglądała jak prowadzona na rzeź. Widziałem napięcie przekraczające możliwości ludzkiej psychiki, ludzkiego organizmu, co tak naprawdę trudno oddzielić jedno od drugiego. Może kiedyś, kiedy wyobraźnia podpowiadała nam, że ten świat wyglądał inaczej. Może zresztą zawsze wygląda tak, jak podpowiada nam wyobraźnia, więc trzeba uważać, co sobie wyobrażamy. Dzisiaj to wszystko jest bardziej materialne, bardziej mieści się w naszych ciałach, całość od nich zależy. To ja, w które tak z całych sił wierzymy.</p>
-<p>I tych kilka ja stojących na korytarzu, siedzących na pękniętych krzesłach, w napięciu, tych kilka ja, którym od napięcia pociły się ciała, one czekały. Na wyrok, który okazał się zbawieniem. Dla członkinie ich rodziny, przyjaciółki, bliskiej znajomej. I wszystkie ja od razu zmieniły swój wygląd. Uśmiech i radość. Uśmiech, który przeradza się w radość, trudną do ukrycia. Te pewne energiczne kroki, ta promieniująca twarz, to pozytywne spojrzenie. Gdyby przyjrzeć się bliżej, gdyby dopuszczono nas do zaglądania głębiej, w strukturę, w łączliwość, zobaczylibyśmy te martwe atomy, które składają się na żywe komórki, które tworzą mięśnie, skórę i odbierają od mózgu te sygnały, których nie można kontrolować. Mózg sobie robi swoje za nas. Pojawia się mimowolny uśmiech.</p>
-<p>Trudne do zniesienia dla reszty ludzi na korytarzu. Zapchanym do granic, bo nie tylko ta jedna lekarka się spóźnia. Jesteśmy tutaj, jak ogórki kiszone w słoiku, jak szproty w puszce. Twarze spuszczone, oczy wbite w ziemię, w podłogę, z lastryka starszego niż ja, niż spora część pacjentów. Tutaj jest duszno od nadmiaru napięcia, od strachu, od poczucia zbliżającego się końca. Wszystkich tych końców świata, wszystkich tych światów, w których atmosfera gęstnieje od momentu pierwszej diagnozy, pierwszego zaobserwowanego guzka na USG. Zbiór atmosfer czyni jedną solidną atmosferę na korytarzu, duszną, uporczywą, gęstą. Gdyby nie to, że to tylko metafora, trudno byłoby się przedostać bez maczety. Atmosfera gęstnieje, bo nie może się rozszerzać jak robi to ponoć Wszechświat. Nasz wszechświat zaciska się, przygniata, tworzy poczucie zniewolenia. A oni wychodzą. To nie ich atmosfera. Zadowoleni, uwolnieni od opresji lęku, od strachu. Od wyobrażania sobie najgorszego scenariusza, od wszystkich tych najgorszych scenariuszy, które pisze nasz mózg, kiedy popuszcza mu się wodze fantazji, kiedy uzbraja się go w te wszystkie możliwe i niemożliwe, prawdopodobne i nieprawdopodobne opowieści znane z kina, telewizji, literatury, portali internetowych, które tak skutecznie zastąpiły kolorowe gazetki z najróżniejszymi insertami.</p>
-<p>I z drugiej strony, jakby wymieniała się z tamtą uradowaną kobietą i jej rodziną, wchodzi na korytarz przez drzwi – będące przejściem w stronę oddziału – lekarka. Ma spuszczoną głowę. Idzie szybko, rytmicznie. Odrzuca rzucone w jej stronę dzień dobry, jakby nie chciała nawiązywać kontaktu, dłuższego niż wymaga tego chwila. Wślizguje się do gabinetu. Jest.</p>
-<p>Westchnienia ulgi na korytarzu mieszają się z komentarzami oburzenia. Ileż można czekać? Ktoś przytakuje, bo to przecież nie pytanie, to oskarżenie. Oskarżenie szpitala, służby zdrowia, systemu, państwa i całej tej niezbyt efektownie zbudowanej rzeczywistości. Na korytarzu dominuje przeświadczenie, że jeśli jakikolwiek inteligentny byt stworzył ten cały cyrk nazywany – może trochę na wyrost – Wszechświatem, to musiał lubować się w obserwowaniu cierpienia, w spuszczaniu na Hiobów całego tego gówna mieszczącego się gdzieś pomiędzy czymś, co chcielibyśmy nazywać życiem a tym, co zdaje się być końcem, śmiercią; w wysyłaniu synów na najróżniejsze wersje ukrzyżowania.</p>
-<p>Tak, to dominujące przeświadczenie o zjebanym projekcie wygrywa z próbą wmówienia, że trzeba mieć nadzieję, że trzeba walczyć. Przynajmniej tutaj, na korytarzu onkologii. Ale cierpliwie czekamy, aż nad drzwiami gabinetu zaświeci się numerek, do którego zostaliśmy przypisani przez automat stojący przy drzwiach wejściowych do szpitala. Jest 10:04. Od dwóch godzin i czterech minut jestem C249. Czekam na swoją kolei.</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/1">grupy 1</a>
-		</section>
+<ul>
+				<li><a href="/1/1/c249/">C249</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
+
 	</body>
 </html>
-
