--- a/osoby/michał-dziedzic/index.html
+++ b/osoby/michał-dziedzic/index.html
@@ -1,95 +1,157 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Michał Dziedzic Wydania  „Michał Dziedzic” | POZa Linią</title>
+		<title>Michał Dziedzic: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Michał Dziedzic</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Michał Dziedzic
+					<br>
+				</h1>
+
 			Michał Dziedzic – urodził się w grudniowy poniedziałek w 1992 roku. Pochodzi z podkrakowskiej wsi. Absolwent filologii polskiej. Żyje z pisania w Warszawie. Poeta od momentu przejścia mutacji. Nominowany do Nagrody Głównej w XXIX OKP im. Jacka Bierezina, finalista 29. i 30. TransPortu Literackiego. Nie lubi rosołu z wzajemnością.
 
-				<h3>unplugged</h3>
-				<p>babciu oni śmieją się z papieża<br>
-przecież on jest tak potężny<br>
-dokłada tajemnic do różańca<br>
-lata samolotem do afryki<br>
-a oni plują mu żółtym jadem</p>
-<p>prosto w twarz</p>
-<p>przez odcięte dopływy<br>
-kurczy się rzeka<br>
-i mniej jest pieśni tak pięknych<br>
-jak ojcze nasz w naszym kościółku<br>
-mniej jest babć modlących się za</p>
-<p>wnuków dobrych jak chleb</p>
-<p>liczył że zgarnie całość<br>
-wszystkie modlitwy pokornych ust<br>
-oranych już czerstwym różańcem<br>
-który pachniał akordami nut<br>
-czystszymi niż głos organistki</p>
-<p>z nią zawsze chciał zaśpiewać<br>
-zwycięzcę śmierci piekła i szatana<br>
-największy hit</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-				<h3>zabawa w chowanego</h3>
-				<p>po świniobiciu dzielą truchło<br>
-pakują w foliówki z napisami<br>
-schodzą na dół do piwniczki<br>
-ku otwieranej od góry<br>
-trumience z lampkami</p>
-<p>obok mieszka prababcia<br>
-imię ma po matce króla<br>
-ma osobne wejście ganek<br>
-imieniny wyprawia w odpust<br>
-nikomu się nie narzuca</p>
-<p>rozpoczyna się biesiadowanie<br>
-krzesła szurają po podłodze<br>
-leje się zimna gęsta wódka<br>
-przed nią nie uchowano<br>
-na razie tylko wujka</p>
-<p>dopiero po pogrzebie<br>
-po zasypaniu opisanej trumny<br>
-dochodzą do nich trzy słowa</p>
-<p>pochowaną<br>
-całe życie nazywali<br>
-babcią z dołu</p>
+<ul>
+				<li><a href="/1/3/unplugged/">unplugged</a></li>
+				<li><a href="/1/3/zabawa-w-chowanego/">zabawa w chowanego</a></li>
+				<li><a href="/1/3/grzebanie/">grzebanie</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-				<h3>grzebanie</h3>
-				<p>pizga całym złem świata<br>
-wchodzi do żabki<br>
-jak w piątej części star wars<br>
-i właśnie że cały aż po jelita</p>
-<p>nie obchodzi go że mróz<br>
-wydał kolejną książkę bo miał ochotę<br>
-jak on na loda takiego na patyku<br>
-wytworny magnum kaliber migdał</p>
-<p>rozsuwając zaparowane wrota<br>
-jego spękana dłoń sięga głęboko<br>
-nie ma tu koperku w pudełku algida<br>
-nie ma skostniałej nogi na rosół</p>
-<p>nie ma tu także ciebie prababciu<br>
-żadnego wspomnienia o tobie<br>
-jest za to napis</p>
-<p>nie grzebać<br>
-na wierzchu są takie same<br>
-jak na dole</p>
-
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-		</section>
 	</body>
 </html>
-
