--- a/osoby/olga-juskowiak/index.html
+++ b/osoby/olga-juskowiak/index.html
@@ -1,66 +1,157 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Olga Juskowiak Wydania  „Olga Juskowiak” | POZa Linią</title>
+		<title>Olga Juskowiak: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Olga Juskowiak</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Olga Juskowiak
+					<br>
+				</h1>
+
 			Olga Juskowiak – graficzka, poetka, absolwentka poznańskiej Akademii Sztuk Pięknych. Jej książka „Zamawiamy gofry” zdobyła Nagrodę Specjalną w XXIX Konkursie im. Jacka Bierezina w 2023 roku. Nagradzana i wyróżniana także w innych konkursach, np. Nowym Dokumencie Tekstowym czy Konkursie im. Anny Świrszczyńskiej. Publikowała m.in. w „Czasie Literatury”, „8. Arkuszu Odry”, „Nowym Napisie”, „Tyglu Kultury”, „Stronie Czynnej”, „Liberte”, „Tlenie Literackim”, „Helikopterze”, „Suburbiach”. Zawodowo i prywatnie związana z Poznaniem. Ma dwie córki.
 
-				<h3>jedyny śnieg tego lata</h3>
-				<p><span style="display:inline-block;width:14ch"></span>na białym tle<br>
-prześcieradeł czekają na deorbitację: ktoś upiera się<br>
-że ma wgląd astralny a ktoś, że wszechświat jest hologramem<br>
-jeden będzie miał rację, jeden będzie się ścinał<br>
-tężejąc w kożuch. zanim zniknie<br>
-ślizgam się w tył, do domu<br>
-i jego wyczerpanych zim</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-				<h3>fala w polu</h3>
-				<p>koniom lżej, można to dosyć łatwo usłyszeć<br>
-z czwartego piętra rozbiegają się<br>
-tak lekko:<br>
-<span style="display:inline-block;width:4ch"></span>klip-klap<br>
-<span style="display:inline-block;width:8ch"></span>klip-klap<br>
-przesuwając dyskretnie ku czerwonemu krańcowi<br>
-widma<br>
-widma. ślady<br>
-obrzęki<br>
-puchniesz w każdym miejscu inaczej<br>
-toczymy się<br>
-jeszcze razem ale dystans<br>
-rośnie<br>
-<span style="display:inline-block;width:8ch"></span>- tak wynika ze wzoru</p>
+<ul>
+				<li><a href="/1/4/jedyny-%C5%9Bnieg-tego-lata/">jedyny śnieg tego lata</a></li>
+				<li><a href="/1/4/fala-w-polu%20/">fala w polu</a></li>
+				<li><a href="/1/4/by%C5%82a-jeszcze-tak-ma%C5%82a/">była jeszcze tak mała</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-				<h3>była jeszcze tak mała</h3>
-				<p>że wpadła w wir elektronowy<br>
-wyczuwalny jedynie diamentową igłą z wakatem azotowym<br>
-na samym czubku, a jednak<br>
-wsiąkała coraz głębiej wiosłując<br>
-rozpaczliwie nietrwałym aparatem<br>
-i wybrzuszając centrum</p>
-<p>najgorsze drżenie, że wypadnie<br>
-po drugiej stronie<br>
-i tej krótkiej smyczy tam</p>
-
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/4">grupy 4</a>
-		</section>
 	</body>
 </html>
-
