--- a/osoby/weronika-stępkowska/index.html
+++ b/osoby/weronika-stępkowska/index.html
@@ -1,78 +1,157 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html>
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Weronika Stępkowska Wydania  „Weronika Stępkowska” | POZa Linią</title>
+		<title>Weronika Stępkowska: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
-	</head>
-	<body>
-		<header style="text-align: center; font-size: 3em; font-weight: bold">
-			<a href="/">POZa Linią</a>
-		</header>
+<style>
+@font-face {
+  font-family: "Lora";
+  src: url("/assets/Lora/Lora-VariableFont_wght.ttf") format("truetype");
+}
+.inactive {
+	color: #ccc;
+}
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: #333;
+		color: white;
+	}
+	.inactive {
+		color: #999;
+	}
+}
+body {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	max-width: 1700px;
+	margin-inline: auto;
+	padding: 10px;
+	gap: 1rem;
+	font-family: sans-serif;
+	font-size: 18px;
+	min-height: 100vh;
+	min-height: 100svh;
+	max-width: 70ch;
+}
+a:link,a:visited {
+		color: #006edc;
+}
+@media (prefers-color-scheme: dark) {
+	a:link,a:visited {
+		color: #15ad93;
+	}
+}
 
-		<section style="margin: auto; max-width: 80ch">
-			<h2>Opublikowane teksty od Weronika Stępkowska</h2>
+p {
+	line-height: 1.6;
+	font-family: Lora, sans-serif;
+}
+aside {
+	padding: 5px;
+}
+
+@media only screen and (min-width: 150ch) {
+	aside {
+		position: absolute;
+		top: 2rem;
+		left: 105%;
+		width: 40ch;
+	}
+	aside > details {
+		border-radius: 0.5rem; padding: 0.5rem; color: #030313;
+		background-color: #ffd289;
+	}
+
+	@media (prefers-color-scheme: dark) {
+		aside > details {
+			background-color: #d5d3bf;
+		}
+	}
+}
+
+h1 > * {
+	margin: 0;
+	padding: 0;
+	text-wrap: balance;
+}
+
+#goprev, #gonext {
+	transition: transform 300ms ease-in;
+}
+
+#goprev:hover, #gonext:hover {
+	transform: scale(1.2);
+}
+
+details span::after {
+	content: " (rozwiń)";
+	opacity: 0.7;
+}
+
+details[open] span::after {
+	content: " (zwiń)";
+	opacity: 0.7;
+}
+</style>
+	</head>
+	<body style="display: flex; flex-direction: column; justify-content: space-between">
+		<div>
+			<header style="display: flex; justify-content: center">
+				<a href="/">
+					<picture>
+						<source srcset="/assets/logo_dark.png" media="(prefers-color-scheme: dark)">
+						<img src="/assets/logo_light.png" style="height: max(8rem, 25vh)" alt="Logo czasopisma POZa Linią">
+					</picture>
+				</a>
+			</header>
+			<main style="position: relative">
+				<h1 style="text-align: center">
+					Weronika Stępkowska
+					<br>
+				</h1>
+
 			Weronika Stępkowska - urodzona w 1978 r. w Łodzi. Studiowała fizykę i kulturoznawstwo na Uniwersytecie Łódzkim. Publikowała wiersze w pismach literackich i antologiach; eseje lub recenzje – w „Arteriach”, „Śląskiej Strefie Gender” i „Sofie” (a niebawem także w „Afroncie” i „Tyglu Kultury”). Laureatka konkursów poetyckich. Nominowana do nagrody głównej w konkursach na tomik wierszy: im. Kazimierza Ratonia (2023) i Fundacji Duży Format (2018). Autorka tomu „Algorytmy i Olgorytmy szaleństwa” (Nowa Ruda, 2023). Prowadzi – głównie krytycznopoetycką – stronę na fejsbuku „Weronicowanie Poezji”.
 
-				<h3>studium budzika</h3>
-				<p>grywam w bierki z czasem.<br>
-stąd wiem, że jest taka godzina,<br>
-której się nie da poruszyć.<br>
-wybita rytmem podrygującej<br>
-wskazówki, to moneta o zaciętym<br>
-nominale. wydajemy<br>
-się jej niezrównoważeni, zagonieni<br>
-w ślepy róg</p>
-<p>cyrk(l)owych ewolucji. zataczamy<br>
-się kołem, wstawieni<br>
-do mechanizmu, którego kwarkami<br>
-są werki. a ona zdecydowała: tu<br>
-leje czasoprzestrzenne światło<br>
-sączone z kieliszków dla syjamskich<br>
-światów. kąt wklęsły<br>
-i wypukły: pierwsza dwadzieścia siedem.</p>
+			<h2 style="text-align: center">Zbiór tekstów</h2>
 
+			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-				<h3>klepsydra</h3>
-				<p>w którym momencie rozpoczyna się Inko-gnicie?<br>
-najazd, kolonizacja? koloryzacja<br>
-pasm górskich na przednówku? gra<br>
-w klasy? klasyfikacja</p>
-<p>możliwych wycofań, jakby w każdym<br>
-nie tkwiła krztusząca się powietrzem<br>
-zasada – arche-<br>
-nietypowość?</p>
-<p>czy będę cudzozimna, czy wolę<br>
-przepaść, gdzie ściany<br>
-i ścinki wrastają w ciało; czy da się żyć, cedząc<br>
-się przez cito – ?</p>
+<ul>
+				<li><a href="/1/3/studium-budzika/">studium budzika</a></li>
+				<li><a href="/1/3/klepsydra/">klepsydra</a></li>
+				<li><a href="/1/3/a-nagram/">a nagram!</a></li>
+			</main>
+		</div>
+		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
+	<div style="display: flex; flex-direction: row; gap: 1ch; justify-content: center; align-items: center">
+		<a style="font-size: 1.2em" href="/">Strona Główna</a>
+		<a style="font-size: 1.2em" href="/o-nas/">O Nas</a>
+		<a style="font-size: 1.2em" href="/kontakt/">Kontakt</a>
+	</div>
+	<div style="display: flex; gap: 1ch">
+		<a href="https://www.facebook.com/czasopismo.pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=435&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=435&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="https://www.instagram.com/pozalinia/" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=32292&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=32292&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+		<a href="/releases.rss" target="_blank">
+			<picture>
+				<source srcset="https://img.icons8.com/?size=100&id=478&format=png&color=15ad93" media="(prefers-color-scheme: dark)">
+				<img src="https://img.icons8.com/?size=100&id=478&format=png&color=006edc" style="height: 2em">
+			</picture>
+		</a>
+	</div>
+</footer>
 
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-				<h3>a nagram!</h3>
-				<p>gryzienie spierzchniętych warg,<br>
-bo nie masz siły podnieść<br>
-czterech liter i przepisać<br>
-ich w kuchni w smaczny metagram:<br>
-duma. że jednak się zwlokłam<br>
-przyrządzać zwłoki, jak, nie przymie-<br>
-rając, rosyjski parlament. nie zjadam<br>
-niektórych liter, uważam, że są<br>
-niestrawne: jak trema, jak termit.<br>
-a jednak zjada<br>
-mnie terma, w której pulsuje<br>
-nasze życie, ciasno opakowane w plastik,<br>
-jak epka z didżejskim setem,<br>
-zacinające się w kółko.</p>
-
-
-<!-- TODO: Change group_id, release_id to names in UI -->
-				<p style="font-style: italic">Tekst opublikowany w <a href="/1">wydaniu 1</a> w ramach <a href="/1/3">grupy 3</a>
-		</section>
 	</body>
 </html>
-
