--- a/kontakt/index.html
+++ b/kontakt/index.html
@@ -120,8 +120,8 @@ details[open] span::after {
 
 <p>A także do śledzenia naszych mediów społecznościowych:</p>
 
-<a href="https://www.facebook.com/czasopismo.pozalinia">https://www.facebook.com/czasopismo.pozalinia</a><br>
-<a href="https://www.instagram.com/pozalinia/">https://www.instagram.com/pozalinia/</a>
+<a href="https://www.facebook.com/czasopismo.pozalinia">Facebook</a><br>
+<a href="https://www.instagram.com/pozalinia/">Instagram</a>
 
 
 			</main>
