--- a/1/4/index.html
+++ b/1/4/index.html
@@ -170,6 +170,12 @@ details[open] span::after {
 </ol>
 </section>
 
+				<aside>
+					<details class="bio">
+						<summary><span>Jakub Skurtys</span></summary>
+						Jakub Skurtys – dr, krytyk i historyk literatury, adiunkt na UWr, autor czterech książek o najnowszej poezji oraz kilku wyborów wierszy. Kontakt: jakub.skurtys2@uwr.edu.pl
+					</details>
+				</aside>
 			</section>
 			<nav class="bottom" style="display: flex; justify-content: space-around; align-items: center; margin-bottom: 1rem; font-size: 2rem; margin-top: 2rem">
 					<a id="goprev" href="/1/3/studium-budzika/" style="text-decoration: none">◁</a>
