--- a/1/index.html
+++ b/1/index.html
@@ -82,9 +82,9 @@ footer {
 
 		<main>
 			<div id="top"></div>
-				<div style="max-width: 1000px; margin: 0 auto; padding: 0; line-height: 0.5rem">
-				<h1 style="text-align: center; margin-bottom: 4rem">Wydanie 1 „Geometrie”, 24.05.2025</h1>
-			</div>
+				<div style="max-width: 1000px; margin: 0 auto; padding: 0">
+					<h1 style="text-align: center; margin-bottom: 4rem">Wydanie 1 „Geometrie”, <time>24.05.2025</time></h1>
+				</div>
 
 
 
