--- a/1/3/index.html
+++ b/1/3/index.html
@@ -153,6 +153,12 @@ Czy literatura podąża po liniach, kryje się za liniami, czy też linie wyznac
 
 				<p>„Linie/jemy formą” napisała Balas i się zgadzam, zarówno z linieniem, jak i z linii jedzeniem – przez formę w oko czytelnika lub w ucho – a później hopefully do serca i będzie happyend, przyjemny romans z literaturą. Zrzuceniem schematów i wyjściem poza oczywistości może być zabawa formalna, i dla pisarza, i dla krytyka. Wszyscy walczymy przecież o oryginalność, a to walka nie łatwa, zwłaszcza w gąszczu tekstów, które aż proszą się o wyznaczenie prostych łączących A i B w spójną, lekkostrawną narrację. Stąd zwrot mój i Jakuba w stronę geometrii trochę mniej oczywistej, która pozwala proste powyginać, zaczepiając o inne konteksty, frazy i języki (sympatii do smaku angielszczyzny nie udało mi się chyba ukryć). W tych zdiagnozowanych przez Jakuba napięciach międzywersowych (i międzywierszowych) rozgrywa się igranie z żałobą (grzebanie babci u Dziedzica), tounge twister na czas („najazd, kolonizacja? koloryzacja/ pasm górskich na przednówku? gra/ w klasy? klasyfikacja” Stępkowskiej), rozstrzelanka wyrazowa w rytmie jojo Gardowskiej. U Wierzchuckiej zaś kontrastuje linia przerywana (intensywnie kropkowana) z ciągiem przyczynowo-skutkowym matczyno-larwalnym, punkty versus pasma, u Poniatowskiej Olivia Coleman kontra Conan O’Brien (a tak naprawdę przyjaciółka-podmiotka szukająca słuchaczki). „Aloha, Grace” Murasickiej to z kolei opowieść pod tytułem tańcowało życie ze śmiercią, niezbyt efektownie (zgadzam się z nadzieją na świadome skampowanie wyrażoną przez Jakuba). Wszyscy silą się na wygibasy prosto z yoga retreat, a komu się udało osiągnąć nirwanę – to już państwo ocenicie sami. U nas toczy się gra w (z)łamanie fraz i interpretacji [transmisja na żywo, przyjmujemy zakłady].</p>
 
+				<aside>
+					<details class="bio">
+						<summary><span>Zuzanna Stasiak </span></summary>
+						Zuzanna Stasiak - studentka filologii polskiej na UAM, przewodnicząca Koła Literatury Nowej, krytyczka w pierwszym numerze "POZa Linią", czasem (rzadko) pisząca też wiersze. Ma za sobą występ oraz współtworzenie zina w ramach poznańskiej Slamki. Współorganizatorka piątej edycji Studenckiej Nagrody Literackiej Z BUTA. Kręci się w tańcu i słowach.
+					</details>
+				</aside>
 			</section>
 			<nav class="bottom" style="display: flex; justify-content: space-around; align-items: center; margin-bottom: 1rem; font-size: 2rem; margin-top: 2rem">
 					<a id="goprev" href="/1/2/sieci-zasilaj%C4%85ce/" style="text-decoration: none">◁</a>
