--- a/1/2/nie-chodzi-o-sacrum/index.html
+++ b/1/2/nie-chodzi-o-sacrum/index.html
@@ -132,68 +132,28 @@ details[open] span::after {
 <p>Idealistycznie staram się wierzyć w wiarygodność instytucji blurbów.<a href="#fnref1" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn2">
-<ol type="A">
-<li>
-Hellich, Kto ma zabić szczura w łazience? Recenzja „Trochę z zimna, trochę z radości” Kingi Sabak, „Kultura Liberalna”, nr 824(43/2024), 22.10.2024, https://kulturaliberalna.pl/2024/10/22/artur-hellich-recenzja-kinga-sabak-troche-z-zimna-troche-z-radosci.
-</li>
-</ol>
-<p><a href="#fnref2" role="doc-backlink">↩︎</a></p>
+<p>A. Hellich, Kto ma zabić szczura w łazience? Recenzja „Trochę z zimna, trochę z radości” Kingi Sabak, „Kultura Liberalna”, nr 824(43/2024), 22.10.2024, https://kulturaliberalna.pl/2024/10/22/artur-hellich-recenzja-kinga-sabak-troche-z-zimna-troche-z-radosci.<a href="#fnref2" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn3">
-<ol start="15" type="A">
-<li>
-Wróbel, Nie grzeje, https://www.dwutygodnik.com/artykul/11596-nie-grzeje.html.
-</li>
-</ol>
-<p><a href="#fnref3" role="doc-backlink">↩︎</a></p>
+<p>O. Wróbel, Nie grzeje, https://www.dwutygodnik.com/artykul/11596-nie-grzeje.html.<a href="#fnref3" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn4">
-<ol start="26" type="A">
-<li>
-Sala [@pytaniazsali], Skończyłam debiut Kingi Sabak „Trochę z zimna, trochę z radości”…, Instagram, 20.12.2024, https://www.instagram.com/p/DDzGtYzOXOT/?igsh=eDRnbzU3dXBlcXEx.
-</li>
-</ol>
-<p><a href="#fnref4" role="doc-backlink">↩︎</a></p>
+<p>Z. Sala [@pytaniazsali], Skończyłam debiut Kingi Sabak „Trochę z zimna, trochę z radości”…, Instagram, 20.12.2024, https://www.instagram.com/p/DDzGtYzOXOT/?igsh=eDRnbzU3dXBlcXEx.<a href="#fnref4" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn5">
-<ol start="11" type="A">
-<li>
-Sabak, Kinga Sabak i jej debiutancki zbiór opowiadań, które łączy bohaterka-lesbijka, rozm. przepr. M. Sikora-Tarnowska, „Replika”, nr 113 (styczeń/luty 2024), https://replika-online.pl/kinga-sabak-i-jej-debiutancki-zbior-opowiadan-ktore-laczy-bohaterka-lesbijka.
-</li>
-</ol>
-<p><a href="#fnref5" role="doc-backlink">↩︎</a></p>
+<p>K. Sabak, Kinga Sabak i jej debiutancki zbiór opowiadań, które łączy bohaterka-lesbijka, rozm. przepr. M. Sikora-Tarnowska, „Replika”, nr 113 (styczeń/luty 2024), https://replika-online.pl/kinga-sabak-i-jej-debiutancki-zbior-opowiadan-ktore-laczy-bohaterka-lesbijka.<a href="#fnref5" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn6">
-<ol start="15" type="A">
-<li>
-Wróbel, dz. cyt.
-</li>
-</ol>
-<p><a href="#fnref6" role="doc-backlink">↩︎</a></p>
+<p>O. Wróbel, dz. cyt.<a href="#fnref6" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn7">
-<ol start="10" type="A">
-<li>
-Struzik, E. Furgał, N. Sarata, „Nikt nie chce być w sferze nieistnienia”. Lesbijki, wieś i Kościół, „Miesięcznik ZNAK”, nr 748, wrzesień 2017, https://www.miesiecznik.znak.com.pl/nikt-nie-chce-byc-w-sferze-nieistnienia-lesbijki-wies-i-kosciol.
-</li>
-</ol>
-<p><a href="#fnref7" role="doc-backlink">↩︎</a></p>
+<p>J. Struzik, E. Furgał, N. Sarata, „Nikt nie chce być w sferze nieistnienia”. Lesbijki, wieś i Kościół, „Miesięcznik ZNAK”, nr 748, wrzesień 2017, https://www.miesiecznik.znak.com.pl/nikt-nie-chce-byc-w-sferze-nieistnienia-lesbijki-wies-i-kosciol.<a href="#fnref7" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn8">
-<ol start="1000" type="I">
-<li>
-Sroczyńska, Młodzież w poszukiwaniu sacrum. Rozważania socjologiczne, „Przegląd Religioznawczy”, nr 2(276)/2020, s. 113–128.
-</li>
-</ol>
-<p><a href="#fnref8" role="doc-backlink">↩︎</a></p>
+<p>M. Sroczyńska, Młodzież w poszukiwaniu sacrum. Rozważania socjologiczne, „Przegląd Religioznawczy”, nr 2(276)/2020, s. 113–128.<a href="#fnref8" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn9">
-<ol start="11" type="A">
-<li>
-Sabak, Kinga Sabak o poszukiwaniu tożsamości w mocnym debiucie „Trochę z zimna, trochę z radości”, rozm. przepr. J. Wojtaszczyk, „Vogue”, 19.10.2024, https://www.vogue.pl/a/wywiad-z-kinga-sabak-autorka-debiutanckiej-ksiazki-troche-z-zimna-troche-z-radosci.
-</li>
-</ol>
-<p><a href="#fnref9" role="doc-backlink">↩︎</a></p>
+<p>K. Sabak, Kinga Sabak o poszukiwaniu tożsamości w mocnym debiucie „Trochę z zimna, trochę z radości”, rozm. przepr. J. Wojtaszczyk, „Vogue”, 19.10.2024, https://www.vogue.pl/a/wywiad-z-kinga-sabak-autorka-debiutanckiej-ksiazki-troche-z-zimna-troche-z-radosci.<a href="#fnref9" role="doc-backlink">↩︎</a></p>
 </li>
 </ol>
 </section>
