--- a/1/4/jedyny-śnieg-tego-lata/index.html
+++ b/1/4/jedyny-śnieg-tego-lata/index.html
@@ -110,7 +110,7 @@ details[open] span::after {
 			<main style="position: relative">
 				<h1 style="text-align: center; display: flex; gap: 1rem; justify-content: center; align-items: center">
 
-						<a id="goprev" href="/1/4/fala-w-polu%20/" style="text-decoration: none">◁</a>
+						<a id="goprev" href="/1/4/fala-w-polu/" style="text-decoration: none">◁</a>
 
 					<p>jedyny śnieg tego lata</p>
 
@@ -134,7 +134,7 @@ i jego wyczerpanych zim</p>
 				</aside>
 			</main>
 			<nav class="bottom" style="display: flex; justify-content: space-around; align-items: center; margin-bottom: 1rem; font-size: 2rem; margin-top: 2rem">
-					<a id="goprev" href="/1/4/fala-w-polu%20/" style="text-decoration: none">◁</a>
+					<a id="goprev" href="/1/4/fala-w-polu/" style="text-decoration: none">◁</a>
 
 				<div style="display: flex; gap: 1ch; margin: 0">
 					<a style="font-size: 1rem" href="/1/">Wydanie 1 „Geometrie”</a>
