--- a/1/4/perfekcyjna-burza/index.html
+++ b/1/4/perfekcyjna-burza/index.html
@@ -115,7 +115,7 @@ details[open] span::after {
 					<p>perfekcyjna burza</p>
 
 
-						<a id="gonext" href="/1/4/fala-w-polu%20/" style="text-decoration: none">▷</a>
+						<a id="gonext" href="/1/4/fala-w-polu/" style="text-decoration: none">▷</a>
 				</h1>
 				<p>Róż jutrzenki błyszczy pozorami, zerwana tapeta to tylko kwestia kilku ruchów, dalej<br>
 w pochyleniu drzew, jest i wiatr, ash, ash i bash! Niech bęben, niech kociołek!<br>
@@ -141,7 +141,7 @@ A potem jest miłość, i ja to mówię? Kto by się spodziewał deszczu co z-bu
 					<a style="font-size: 1rem" href="/1/4/">FALE & FUNKCJE</a>
 				</div>
 
-					<a id="gonext" href="/1/4/fala-w-polu%20/" style="text-decoration: none">▷</a>
+					<a id="gonext" href="/1/4/fala-w-polu/" style="text-decoration: none">▷</a>
 			</nav>
 		</div>
 		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
