--- a/1/4/rozpisane-w-czasie-obrazy/index.html
+++ b/1/4/rozpisane-w-czasie-obrazy/index.html
@@ -175,12 +175,7 @@ Książka poetycka Korlackiego ma wiele zaskakujących momentów, rozmawia <span
 <hr>
 <ol>
 <li id="fn1">
-<ol type="A">
-<li>
-Korlacki, Ćwiczenia na długich czasach (Instytut Mikołowski im. R.Wojaczka, 2023), s. 21
-</li>
-</ol>
-<p><a href="#fnref1" role="doc-backlink">↩︎</a></p>
+<p>A. Korlacki, Ćwiczenia na długich czasach (Instytut Mikołowski im. R.Wojaczka, 2023), s. 21<a href="#fnref1" role="doc-backlink">↩︎</a></p>
 </li>
 <li id="fn2">
 <p>Tamże, s. 26<a href="#fnref2" role="doc-backlink">↩︎</a></p>
