--- a/osoby/dobrochna-kołoczek/index.html
+++ b/osoby/dobrochna-kołoczek/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Olga Juskowiak: teksty |  POZa Linią</title>
+		<title>Dobrochna Kołoczek: teksty |  POZa Linią</title>
 		<link rel="stylesheet" href="/common.css">
 <style>
 @font-face {
@@ -109,20 +109,18 @@ details[open] span::after {
 			</header>
 			<main style="position: relative">
 				<h1 style="text-align: center">
-					Olga Juskowiak
+					Dobrochna Kołoczek
 					<br>
 				</h1>
 
-			Olga Juskowiak – graficzka, poetka, absolwentka poznańskiej Akademii Sztuk Pięknych. Jej książka „Zamawiamy gofry” zdobyła Nagrodę Specjalną w XXIX Konkursie im. Jacka Bierezina w 2023 roku. Nagradzana i wyróżniana także w innych konkursach, np. Nowym Dokumencie Tekstowym czy Konkursie im. Anny Świrszczyńskiej. Publikowała m.in. w „Czasie Literatury”, „8. Arkuszu Odry”, „Nowym Napisie”, „Tyglu Kultury”, „Stronie Czynnej”, „Liberte”, „Tlenie Literackim”, „Helikopterze”, „Suburbiach”. Zawodowo i prywatnie związana z Poznaniem. Ma dwie córki.
+			Dobrochna Kołoczek – poetka, poza tym dość chaotyczna mieszanka różnych elementów. Nigdy nie potrafi zdefiniować się do końca.
 
 			<h2 style="text-align: center">Zbiór tekstów</h2>
 
 			<p>Teksty opublikowane w ramach wydania 1 czasopisma:</p>
 
 <ul>
-				<li><a href="/1/4/jedyny-%C5%9Bnieg-tego-lata/">jedyny śnieg tego lata</a></li>
-				<li><a href="/1/4/fala-w-polu/">fala w polu</a></li>
-				<li><a href="/1/4/by%C5%82a-jeszcze-tak-ma%C5%82a/">była jeszcze tak mała</a></li>
+				<li><a href="/1/2/za-%C5%9Bcian%C4%85/">***[Za ścianą rozgrywa się dramat. Ścian jest wiele]</a></li>
 			</main>
 		</div>
 		<footer style="display: flex; justify-content: space-between; align-items: center; margin-top: 1rem; padding-top: 0.5rem">
