--- a/1/osoby/index.html
+++ b/1/osoby/index.html
@@ -138,7 +138,7 @@ h1 > * {
 						<dd><a href="/1/1/pok%C3%B3j/">POKÓJ</a></dd>
 						<dt style="font-weight: bold">Olga Juskowiak</dt>
 						<dd><a href="/1/4/jedyny-%C5%9Bnieg-tego-lata/">jedyny śnieg tego lata</a></dd>
-						<dd><a href="/1/4/fala-w-polu%20/">fala w polu</a></dd>
+						<dd><a href="/1/4/fala-w-polu/">fala w polu</a></dd>
 						<dd><a href="/1/4/by%C5%82a-jeszcze-tak-ma%C5%82a/">była jeszcze tak mała</a></dd>
 						<dt style="font-weight: bold">Patrycja Murasicka</dt>
 						<dd><a href="/1/3/aloha-grace/">Aloha, Grace</a></dd>
